--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "@heroicons/react": "^2.1.5",
     "@uiw/react-codemirror": "^4.23.6",
     "axios": "^1.7.7",
+    "i18next": "^23.16.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-i18next": "^15.1.1",
     "react-icons": "^5.3.0",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.27.0"
